--- a/package.json
+++ b/package.json
@@ -49,5 +49,9 @@
 		"webp-converter": "2.2.3",
 		"webpack": "latest",
 		"webpack-stream": "latest"
+	},
+	"dependencies": {
+		"gsap": "^3.12.1",
+		"swiped-events": "^1.1.7"
 	}
 }
